--- a/server/PHPDocConfig.ini
+++ b/server/PHPDocConfig.ini
@@ -3,6 +3,7 @@ pear=off
 output=HTML:frames:l0l33t
 defaultpackagename=JavaBridge
 parseprivate=off
+ignore=Java.inc,JavaProxy.php,dummy.php
 directory=META-INF/java
 target=../documentation/API
 defaultcategoryname=java
