--- a/debian/rules
+++ b/debian/rules
@@ -171,37 +171,6 @@ php-java-bridge-j2ee-selinux:
 	dh_builddeb  -p$@
 
 
-php-java-bridge-selinux: 
-	dh_testdir
-	dh_testroot
-	dh_installdirs  -p$@
-	dh_installchangelogs  -p$@  ChangeLog
-	dh_installdocs  -p$@
-#	dh_installexamples -p$@
-	dh_installdirs -p$@
-	dh_install   --fail-missing -p$@
-#	dh_installmenu -i
-#	dh_installdebconf -i
-#	dh_installlogrotate -i
-#	dh_installemacsen -i
-#	dh_installpam -i
-#	dh_installmime -i
-#	dh_python -i
-#	dh_installinit -i
-#	dh_installcron -i
-#	dh_installinfo -i
-	dh_installman  -p$@
-	dh_link  -p$@
-	dh_strip  -p$@
-	dh_compress  -p$@
-	dh_fixperms  -p$@
-#	dh_perl -i
-	dh_makeshlibs -p$@
-	dh_installdeb -p$@
-	dh_shlibdeps  -p$@
-	dh_gencontrol  -p$@
-	dh_md5sums  -p$@
-	dh_builddeb  -p$@
 
 # creating devel package . See /debian/*devel.* files
 # note the -p$@ to use target name package files in /debian as parameters
@@ -294,41 +263,11 @@ php-java-bridge-j2ee-docs:
 # Build architecture-dependent files here.
 # Caution: the -a option is for rule acting on ALL architecture DEPENDENT 
 # packages at this WHOLE file, not only at where it is written.
-binary-arch:
-	dh_testdir
-	dh_testroot
-	dh_installdirs -a
-	dh_installchangelogs -a ChangeLog
-	dh_installdocs -a
-#	dh_installexamples -a
-#	dh_install --exclude=JavaBridge.war -a --fail-missing ${BUILDDIR}$(PHP_EXT_DIR)/* $(PHP_EXT_DIR)
-#	dh_installmenu -a
-#	dh_installdebconf -a	
-#	dh_installlogrotate -a
-#	dh_installemacsen -a
-#	dh_installpam -a
-#	dh_installmime -a
-#	dh_python -a
-#	dh_installinit -a
-#	dh_installcron -a
-#	dh_installinfo -a
-	dh_installman -a
-	dh_link -a
-	dh_strip -a
-	dh_compress -a
-	dh_fixperms -a
-#	dh_perl -a
-	dh_makeshlibs -p$@
-	dh_installdeb -a
-	dh_shlibdeps -a
-	dh_gencontrol -a
-	dh_md5sums -a
-	dh_builddeb -a
 
 # build and install are implicit, but THIS package source needs 2 cycles.
 # so the first cycle is implicity and this entry is for the second cycle.
 binary: build install binary-indep
-.PHONY: build build-stamp clean clean-patched binary-indep binary-arch binarydocs binary install configure configure-stamp installdocs installbasic unpatch patchsource patch-stamp  php-java-bridge-j2ee php-java-bridge-devel php-java-bridge-docs php-java-bridge-j2ee-docs php-java-bridge-j2ee-selinux php-java-bridge-selinux
+.PHONY: build build-stamp clean clean-patched binary-indep binarydocs binary install configure configure-stamp installdocs installbasic unpatch patchsource patch-stamp  php-java-bridge-j2ee php-java-bridge-devel php-java-bridge-docs php-java-bridge-j2ee-docs php-java-bridge-j2ee-selinux 
 
 # using dpatch for flexibility
 unpatch:
