--- a/server/PHPDocConfig.ini
+++ b/server/PHPDocConfig.ini
@@ -1,13 +1,13 @@
 #Sun Mar 16 19:11:29 CET 2008
 pear=off
 output=HTML:frames:l0l33t
-defaultpackagename=JavaBridge
+defaultpackagename=java
 parseprivate=off
-ignore=Java.inc,JavaProxy.php,dummy.php
+ignore=Java.inc,JavaProxy.php
 directory=META-INF/java
 target=../documentation/API
 defaultcategoryname=java
 title=VM Bridge
 hiddendirs=off
 sourcecode=on
-javadocdesc=on
+javadocdesc=off
